# orgparse

./: .gitignore  .travis.yml  LICENSE  Makefile  README.rst  conftest.py  mypy.ini  orgparse.py  pyproject.toml  pytest.ini  ruff.toml  setup.py  tox.ini
.ci/: release  run
.github/workflows/: main.yml
doc/: Makefile  make.bat
doc/source/: conf.py  date.rst  dev.rst  index.rst  node.rst
orgparse/: __init__.py  date.py  extra.py  inline.py  node.py  orgdate.py  py3compat.py
orgparse/tests/: test_data.py  test_date.py  test_hugedata.py  test_misc.py  test_rich.py
orgparse/tests/data/: 00_simple.py  01_attributes.org  01_attributes.py  02_tree_struct.py  03_repeated_tasks.py  04_logbook.org  04_logbook.py  05_tags.org  05_tags.py
orgparse/utils/: _py3compat.py  py3compat.py
src/orgparse/: __init__.py  date.py  extra.py  inline.py  node.py
src/orgparse/tests/: test_data.py  test_date.py  test_hugedata.py  test_misc.py  test_rich.py
src/orgparse/tests/data/: 00_simple.org  00_simple.py  01_attributes.py  02_tree_struct.org  02_tree_struct.py  03_repeated_tasks.org  03_repeated_tasks.py  04_logbook.py  05_tags.org  05_tags.py
tests/: test_data.py  test_parsers.py
tests/data/: 00_simple.py  01_attributes.org  01_attributes.py  02_tree_struct.org  02_tree_struct.py  03_repeated_tasks.py
